# my-life-movie-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: api.yml  bug.yml  config.yml  docs.yml  feature.yml  infra.yml  task.yml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  middleware.py  openapi.py  security.py
app/db/: session.py
app/models/: __init__.py  auth_refresh_token.py  movie.py  movie_recommendation.py  user.py  video_generation_job.py
app/repositories/: __init__.py  movie_recommendation_repository.py  movie_repository.py  redis_refresh_token_store.py  refresh_token_store.py  user_repository.py  video_generation_job_repository.py
app/routers/: auth.py  images.py  movies.py  music.py  themes.py
app/schemas/: __init__.py  auth.py  errors.py  movie.py  music.py  theme.py
app/services/: __init__.py  access_token_service.py  auth_service.py  movie_recommendation_service.py  refresh_token_service.py  storage_service.py  story_generation_service.py  (+5 more)
docs/: CONVENTIONS.md  ERD.md  video-generation-job-plan.md
migrations/: env.py
tests/: conftest.py  factories.py  fakes.py  test_auth_routes.py  test_common_foundation.py  test_finalize_story_api.py  test_image_resize.py  test_input_api.py  test_movies.py  test_music_api.py  test_refresh_token_service.py  test_summary_api.py  test_themes_and_draft.py  test_user_model.py
(+41 files in other folders)
