[project]
name = "my-life-movie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
